cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_28.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:53: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:53:13: Write of unused value
51.           }
52.           if (l != -8) {
53.               c2ln(in, tin0, tin1, l + 8);
                  ^
54.               tin0 ^= tout0 ^ inW0;
55.               tin[0] = tin0;
